# cleancode_naming

./: CMakeLists.txt  LICENSE  README.md  pom.xml
code/: CMakeLists.txt
src/main/java/fr/cleancode/: App.java  PrimePrinter.java
src/test/java/fr/cleancode/: AppTest.java  PrimePrinterTest.java
tests/: CMakeLists.txt  PrimesPrinterTest.cpp
visual-studio-2017/: AppTest.Makes_sure_output_matches_gold.approved.txt  AppTest.cpp  StarterProject.vcxproj
